--- a/resume.css
+++ b/resume.css
@@ -70,13 +70,24 @@ h3{
     /* flex-wrap: wrap;
     align-content: center; */
 }
+.image{
+    width:300px;
+    height:300px;
+
+    overflow: hidden;
+}
 #profile{
+    width:300px;
+    height:300px;
+
     background-color: aliceblue;
     transition: background-color 0.5s;
 }
 #profile:hover{
     background-color: rgb(225, 240, 253);
-    transform: scale(1.1);
+    transform: scale(1.3);
+    transition: 0.5s linear;
+
 }
 /* 하단 내용 */
 footer{
