--- a/resume.css
+++ b/resume.css
@@ -44,7 +44,7 @@ nav ul li a{
 #nav1:hover, #nav2:hover, #nav3:hover{
     background-color: rgb(189, 189, 189);
     transform: scale(1.05);
-    transition: 0.5s linear;
+    transition: 0.3s linear;
 }
 
 
@@ -68,8 +68,6 @@ h3{
     grid-template-columns: 1fr 1fr;
     width: 100%;
     margin-top: 20px;
-    /* flex-wrap: wrap;
-    align-content: center; */
 }
 .image{
     width:300px;
@@ -83,6 +81,7 @@ h3{
 
     background-color: aliceblue;
     transition: background-color 0.5s;
+    transition: 0.5s linear;
 }
 #profile:hover{
     background-color: rgb(225, 240, 253);
@@ -95,7 +94,7 @@ footer{
     background-color: #cacaca;
     margin-top: 30px;
     padding: 10px;
-    color: #9d9b9b;
+    color: #ececec;
 }
 
 @media (max-width: 768px){
@@ -104,7 +103,7 @@ footer{
     }
     #nav1:hover, #nav2:hover, #nav3:hover{
         transform: scale(1.02);
-        transition: 0.5s linear;
+        transition: 0.3s linear;
     }
     main h1,h2,h3, .first{
         text-align: center;
